# zk-stf

./: .gitignore  Cargo.toml  LICENSE  README.md  deploy-remote.sh  install-protoc.sh  summarize-sweep.py  sun.sh
crates/ledger-core/: Cargo.toml
crates/ledger-core/src/: lib.rs
logs/: run_info.txt
node/consensus-node/: Cargo.toml
node/consensus-node/src/: main.rs
node/run-workload/: Cargo.toml
node/run-workload/src/: main.rs
plans/: consensus.md  sun.md
workloads/one_hundred/: ledger-program.elf  manifest.json
workloads/one_hundred/block_0000/: commit.json
workloads/one_hundred/block_0001/: commit.json
workloads/one_hundred/block_0002/: commit.json
workloads/one_hundred/block_0003/: commit.json
workloads/one_hundred/block_0004/: commit.json
workloads/one_hundred_k/: ledger-program.elf  manifest.json
workloads/one_hundred_k/block_0000/: commit.json
workloads/one_hundred_k/block_0001/: commit.json
workloads/one_hundred_k/block_0002/: commit.json
workloads/one_hundred_k/block_0003/: commit.json
workloads/one_hundred_k/block_0004/: commit.json
workloads/one_k/: manifest.json
workloads/one_k/block_0000/: commit.json
workloads/one_k/block_0001/: commit.json
workloads/one_k/block_0002/: commit.json
workloads/one_k/block_0003/: commit.json
workloads/one_k/block_0004/: commit.json
workloads/one_million/block_0000/: commit.json
workloads/one_million/block_0001/: commit.json
workloads/one_million/block_0002/: commit.json
workloads/one_million/block_0003/: commit.json
workloads/one_million/block_0004/: commit.json
workloads/one_million_v2/block_0000/: commit.json
workloads/one_million_v2/block_0001/: commit.json
workloads/one_million_v2/block_0002/: commit.json
workloads/one_million_v2/block_0004/: commit.json
workloads/ten_k/: manifest.json
workloads/ten_k/block_0000/: commit.json
workloads/ten_k/block_0001/: commit.json
workloads/ten_k/block_0002/: commit.json
workloads/ten_k/block_0003/: commit.json
workloads/ten_k/block_0004/: commit.json
zkvm/: Cargo.toml  USAGE.md
zkvm/lib/: Cargo.toml
zkvm/lib/src/: lib.rs
zkvm/program/: Cargo.toml
zkvm/program/src/: main.rs
zkvm/script/: Cargo.toml
zkvm/workloads/one_million/: manifest.json
(+5 files in other folders)
