[workspace]
members = [
    "crates/ledger-core",
    "zkvm/program",
    "zkvm/script",
    "node/run-workload",
    "node/consensus-node",
]
resolver = "2"

[workspace.dependencies]
ledger-core = { path = "crates/ledger-core" }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
serde_json = "1.0"
bincode = "1.3"
clap = { version = "4.0", features = ["derive", "env"] }
hex = "0.4.3"
