[package]
name = "run-workload"
version = "0.1.0"
edition = "2021"

[dependencies]
ledger-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
sp1-sdk = { version = "6.1.0", features = ["blocking"] }
