[package]
name = "ledger-script"
version = "0.1.0"
edition = "2021"
default-run = "ledger"

[[bin]]
name = "ledger"
path = "src/bin/main.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[[bin]]
name = "network"
path = "src/bin/network.rs"

[dependencies]
sp1-sdk = { version = "6.1.0", features = ["blocking", "native-gnark", "network"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
ledger-core = { workspace = true }
dotenv = "0.15.0"

[build-dependencies]
sp1-build = { version = "6.1.0" }
